save sector pool
